[package]
name = "braidpool_competency_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoincore-rpc = "0.18.0"
rand = "0.8.5"
bitcoin = "0.30.2"
bitcoincore-rpc-json = "0.18.0"
secp256k1 = { version = "0.29.0", feature = ["rand"] }
